Bug 420055 - New shutdown crash, patch=aaronlev, r=me, sr=mconnor, approval1.9b4+=mconnor,beltzner